# OpenXR-Hpp

./: .clang-format  .cmake-format.json  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  OPENXR-HPP.md  README.md  azure-pipelines.yml  generate-openxr-hpp.bat  generate-openxr-hpp.ps1  generate-openxr-hpp.sh  headers.txt  runClangFormat.sh
cmake/: FindOpenXR.cmake  ezvcpkg.cmake
include/: CMakeLists.txt
include/openxr/: CMakeLists.txt  openxr.hpp  openxr_dynamic_loader.hpp
include/openxr/not-installed/: openxr_doxygen.hpp
scripts/: .clang-format  atom.hpp  copyright_header.hpp  cpp_generator.py  data.py  define_assert.hpp  define_conversion.hpp  define_inline_constexpr.hpp  define_namespace.hpp  define_namespace_string.hpp  defines.hpp  enhanced_mode_results.hpp  enum.hpp  file_footer.hpp  file_header.hpp  flag_type.hpp  handle.hpp  hpp_genxr.py  jinja_helpers.py  macros.hpp  method_decl_macros.hpp  method_impl_enh.hpp  method_impl_enh_exc.hpp  method_impl_macros.hpp  method_impl_simple.hpp  nongenerated_base.hpp  nongenerated_flags.hpp  nongenerated_unique.hpp  src_genxr.py  struct.hpp  template_macros.hpp  template_openxr.hpp  template_openxr_atoms.hpp  template_openxr_bool.hpp  template_openxr_dispatch_dynamic.hpp  template_openxr_dispatch_static.hpp  template_openxr_dispatch_traits.hpp  template_openxr_dispatchdynamic.hpp  template_openxr_dispatchstatic.hpp  template_openxr_duration.hpp  (+31 more)
specification/scripts/: jinja_helpers.py
src/scripts/: cpp_generator.py  template_openxr.hpp  template_openxr_dispatchdynamic.hpp  template_openxr_dispatchstatic.hpp  template_openxr_enums.hpp  template_openxr_exceptions.hpp  template_openxr_handleclasses.hpp  template_openxr_methodimpls.hpp  template_openxr_nongenerated.hpp  template_openxr_nongenerated_base.hpp  template_openxr_nongenerated_unique.hpp
src/tests/hello_xr/: c.cpp
tests/: CMakeLists.txt  a.cpp  b.cpp  boolean.cpp  build_cleanly.cpp.in  c.cpp  d.cpp  e.cpp  flags.cpp  math.cpp  version.cpp  xr_dependencies.h
